[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postq-sdk"
version = "0.1.0"
description = "Official PostQ SDK for Python — quantum-safe cryptography for your applications"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["postq", "quantum", "cryptography", "post-quantum", "dilithium", "signing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "urllib3>=1.26,<3",
]

[project.urls]
Homepage = "https://postq.io"
Documentation = "https://github.com/PostQDev/postq-sdk-all/tree/main/sdks/python#readme"
Repository = "https://github.com/PostQDev/postq-sdk-all"
"Bug Tracker" = "https://github.com/PostQDev/postq-sdk-all/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.25",
    "build>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["postq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
