[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postq-sdk"
version = "0.3.0"
description = "Official PostQ SDK for Python — submit quantum-risk scans and read results from the PostQ API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "PostQ", email = "support@postq.dev" }]
keywords = ["postq", "post-quantum", "cryptography", "security", "tls", "scanner", "pqc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["requests>=2.31,<3"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.25",
    "build>=1.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://postq.dev"
Documentation = "https://postq.dev/docs"
Repository = "https://github.com/PostQDev/postq-sdk-all"
"Bug Tracker" = "https://github.com/PostQDev/postq-sdk-all/issues"

[tool.hatch.build.targets.wheel]
packages = ["postq"]

[tool.hatch.build.targets.sdist]
include = ["/postq", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
